--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "vector": "cpp",
         "memory_resource": "cpp",
         "sstream": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "iterator": "cpp",
+        "ostream": "cpp"
     }
 }
